fix font sizes on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,7 +83,7 @@ html {
 
   width: calc(100vw - 20px);
   height: calc(100vh - 20px);
-  transform: translateY(calc(100vh - 20px - 10px));
+  transform: translateY(calc(100vh - 150px - 10px));
 
   @media (width >= 64rem) {
     width: calc(100vw - 60px);
@@ -93,17 +93,17 @@ html {
 
   .timeline-cta {
     @apply absolute top-0 right-0;
-    @apply w-full h-[20px] lg:h-[60px];
+    @apply w-full h-[160px] lg:h-[60px];
     @apply flex flex-row justify-center items-center;
     @apply px-30 lg:px-90;
-    @apply text-2xl font-bold text-BROWN;
+    @apply text-xl lg:text-2xl font-bold text-BROWN;
   }
 }
 
 .eye-date-picker {
   @apply flex flex-row items-center gap-2;
 
-  @apply text-3xl lg:text-6xl font-bold text-WHITE;
+  @apply text-2xl lg:text-6xl font-bold text-WHITE;
 
   & select {
     -webkit-appearance: none;
